# GLEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FindSGE.cmake  README.md
3rd/: CMakeLists.txt
3rd/GLEW/: CMakeLists.txt
3rd/GLFW3/lib/Win32/: glfw3.lib
3rd/GLFW3/lib/x64/: glfw3.lib
3rd/OpenGLES/: CMakeLists.txt
3rd/assimp/lib/Win32/: IrrXML.lib  zlibstatic.lib
3rd/assimp/lib/x64/: IrrXML.lib  zlibstatic.lib
App/: CMakeLists.txt
App/source/: main.cpp
application/: CMakeLists.txt  main.cpp
application/include/: MainScene.h
application/sources/: MainScene.cpp  main.cpp
applications/empty/: CMakeLists.txt
applications/empty/src/: AssetLoaderTest.cpp  main.cpp
cmake/: FindASSIMP.cmake  FindGLFW3.cmake
demo1/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/application/: main.cpp
include/: sge.h  sgeBufferReader.h  sgeCamera.h  sgeDelegate.h  sgeDelegatePrivate.h  sgeFileReader.h  sgeFont.h  sgeGLApp.h  sgeGLContext.h  sgeGLSLProgram.h  sgeGLSLUtil.h  sgeGLX.h  sgeGlobalResources.h  sgeGround.h  sgeLog.h  sgeMaterial.h  sgeMath.h  sgeMesh.h  sgeModelManager.h  sgeMutex.h  sgeSemaphore.h  sgeSkybox.h  sgeSteamReader.h  sgeTexture.h  sgeThread.h  sgeTimer.h  sgeUtils.h
include/imgui/: imconfig.h  imgui_impl_win32.h
include/shapes/: cube.h
plugin/: CMakeLists.txt
plugin/plugin.assimp/: CMakeLists.txt
plugin/plugin.assimp/src/: main.cpp
res/mesh/: Cube.objx  public.mtl
res/shader/: InstCmd.vert  Model.frag  Model.vert  P3C4.frag  P3C4.vert  Skybox.frag  skybox.vs.glsl
sge/: CMakeLists.txt
sge/include/asset/: sgeAssetLoader.h
sge/include/core/: sgeApplication.h  sgeBaseSceneObject.h  sgeBufferReader.h  sgeCamera.h  sgeColors.h  sgeContext.h  sgeDefs.h  sgeDelegate.h  sgeDelegatePrivate.h  sgeFileReader.h  sgeGLContext.h  sgeGLSLProgram.h  sgeGLSLUtil.h  sgeGLX.h  sgeGUIRenderer.h  sgeGuid.h  sgeIInputHandler.h  sgeImage.h  sgeLibrary.h  sgeLog.h  sgeMath.h  sgeModuleLoader.h  sgeMutex.h  sgePlatform.h  sgePlatformNative.h  sgeRef.h  sgeRefPtr.h  sgeRenderer.h  sgeRuntimeModule.h  sgeScene.h  sgeSceneObject.h  sgeSceneObjectTypes.h  sgeSemaphore.h  sgeShaderManager.h  sgeSteamReader.h  sgeStreamReader.h  sgeTextureManager.h  sgeThread.h  sgeTimer.h  sgeglx.h
sge/include/device/: sgeDeviceModule.h
sge/include/graphics/: sgeGPUCommand.h  sgeGpuBuffer.h  sgeGraphicsDevice.h  sgeGraphicsSystem.h  sgeShaderProgram.h  sgeTexture.h  sgeVertexBuffer.h
sge/include/image/: stb_image.h
sge/include/input/: sgeInputSystem.h
sge/include/scene/: sgeIScene.h  sgeISceneNode.h  sgeISceneSystem.h  sgeSceneObject.h  sgeSceneObjectTypes.h
sge/include/ui/: sgeLabel.h  sgeLayoutParam.h  sgeLinearLayout.h  sgeView.h  sgeViewGroup.h
sge/include/win32/: sgePlatformNativeWin32.h
sge/source/: CMakeLists.txt
sge/source/asset/: CMakeLists.txt  sgeAssetLoaderImpl.cpp  sgeAssetLoaderImpl.h
sge/source/asset/win32/: sgeAssetLoaderWin32.cpp
sge/source/core/: CMakeLists.txt  sgeApplication.cpp  sgeGLContext.cpp  sgeGLSLProgram.cpp  sgeGLX.cpp  sgeGuid.cpp  sgeLibrary.cpp  sgeLog.cpp  sgeMutex.cpp  sgeRef.cpp  sgeRenderer.cpp  sgeScene.cpp  sgeSemaphore.cpp  sgeTextureManager.cpp  sgeThread.cpp  sgeTimer.cpp
sge/source/device/: CMakeLists.txt
sge/source/device/glfw3/: CMakeLists.txt  sgeDeviceGLFW3.cpp  sgeDeviceGLFW3.h  sgeDeviceModuleGLFW3.cpp
sge/source/graphics/: sgeGraphicsSystem.cpp  sgeVertexBuffer.cpp
sge/source/graphics/opengl/: CMakeLists.txt  sgeOpenGL.h  sgegraphicsdevice.cpp
sge/source/graphics/opengl/glew/: glew.h
sge/source/input/: sgeinputsystem.cpp
sge/source/nanovg/: nanovg.c
sge/source/ui/: sgeLabel.cpp  sgeLinearLayout.cpp  sgeView.cpp  sgeViewGroup.cpp  sgeViews.cpp  sgeview.cpp
sge/source/win32/: sgePlatformNativeWin32.cpp
sge/source/win32/asset/: sgeAssetLoaderImpl.h
sge/src/core/: sgeApplication.cpp  sgeGLSLProgram.cpp  sgeGLX.cpp  sgeGUIRenderer.cpp  sgeGuid.cpp  sgeLibrary.cpp  sgeLog.cpp  sgeMutex.cpp  sgeScene.cpp  sgeSemaphore.cpp  sgeTextureManager.cpp  sgeThread.cpp  sgeTimer.cpp
sge/src/nanovg/: nanovg.h
src/: CMakeLists.txt  glew.c  sgeFont.cpp  sgeGLAppWin.cpp  sgeGLContextWin.cpp  sgeGLSLProgram.cpp  sgeGLX.cpp  sgeLog.cpp  sgeMesh.cpp  sgeModelManager.cpp  sgeMutex.cpp  sgeSemaphore.cpp  sgeTexture.cpp  sgeThread.cpp  sgeTimer.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_win32.cpp
